{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 59,
  "lineage": "676642f4-4eb1-e4d6-691f-7bb7b7cf094e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "skyeyeigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:213937518703:internet-gateway/igw-0f89a8e801d78901c",
            "id": "igw-0f89a8e801d78901c",
            "owner_id": "213937518703",
            "tags": {
              "Name": "skyeyeIGW"
            },
            "tags_all": {
              "Name": "skyeyeIGW"
            },
            "vpc_id": "vpc-006caab79758ed2bd"
          },
          "dependencies": [
            "aws_vpc.sky_eye_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "skyeyeigw_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f89a8e801d78901c",
            "id": "r-rtb-0211c3221a00829ff1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0211c3221a00829ff",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.skyeyeigw",
            "aws_route_table.skyeyeroutetable",
            "aws_vpc.sky_eye_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "skyeyeroutetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:213937518703:route-table/rtb-0211c3221a00829ff",
            "id": "rtb-0211c3221a00829ff",
            "owner_id": "213937518703",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f89a8e801d78901c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "SkyEyeRouteTable"
            },
            "tags_all": {
              "Name": "SkyEyeRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-006caab79758ed2bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sky_eye_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "SkyEyeSubnetAssociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a1490e03b6025461",
            "route_table_id": "rtb-0211c3221a00829ff",
            "subnet_id": "subnet-0c0eaf3322a47489b"
          },
          "dependencies": [
            "aws_route_table.skyeyeroutetable",
            "aws_subnet.SkyEyeSubnets",
            "aws_vpc.sky_eye_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f8c902c38f1f6b7",
            "route_table_id": "rtb-0211c3221a00829ff",
            "subnet_id": "subnet-0a3fefb2daa3f0dfb"
          },
          "dependencies": [
            "aws_route_table.skyeyeroutetable",
            "aws_subnet.SkyEyeSubnets",
            "aws_vpc.sky_eye_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:213937518703:security-group/sg-0e299fe097075d4d5",
            "description": "Security Group that allows all inbound and outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e299fe097075d4d5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_all_traffic",
            "name_prefix": "",
            "owner_id": "213937518703",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_all_traffic"
            },
            "tags_all": {
              "Name": "allow_all_traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-006caab79758ed2bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sky_eye_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "postgres_database_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:213937518703:security-group/sg-0efb6b5acad3c590d",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0efb6b5acad3c590d",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.2.0/24"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "rds-database-security-group20240519191946511200000001",
            "name_prefix": "rds-database-security-group",
            "owner_id": "213937518703",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-006caab79758ed2bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sky_eye_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "SkyEyeSubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:213937518703:subnet/subnet-0c0eaf3322a47489b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c0eaf3322a47489b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "213937518703",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet1"
            },
            "tags_all": {
              "Name": "PublicSubnet1"
            },
            "vpc_id": "vpc-006caab79758ed2bd"
          },
          "dependencies": [
            "aws_vpc.sky_eye_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:213937518703:subnet/subnet-0a3fefb2daa3f0dfb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a3fefb2daa3f0dfb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "213937518703",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet2"
            },
            "tags_all": {
              "Name": "PublicSubnet2"
            },
            "vpc_id": "vpc-006caab79758ed2bd"
          },
          "dependencies": [
            "aws_vpc.sky_eye_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sky_eye_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:213937518703:vpc/vpc-006caab79758ed2bd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01489fd5005c3c0d3",
            "default_route_table_id": "rtb-07aa22b4533718853",
            "default_security_group_id": "sg-0d78db93d7dd0883a",
            "dhcp_options_id": "dopt-0164f5daff81d73ba",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-006caab79758ed2bd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07aa22b4533718853",
            "owner_id": "213937518703",
            "tags": {
              "Name": "SkyEyeVpc"
            },
            "tags_all": {
              "Name": "SkyEyeVpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}